now added swagger for the provider side but not tested endpoints
